--- a/02. Git-Version-Control-Basics/index.html
+++ b/02. Git-Version-Control-Basics/index.html
@@ -44,8 +44,8 @@
         }
 
         .logo {
-            color: #3498db;
-            font-size: 1.5rem;
+            color: white;
+            font-size: 1.6rem;
             font-weight: bold;
         }
 
