--- a/03. Mini Project - Basic Git Commands/index.html
+++ b/03. Mini Project - Basic Git Commands/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Innovate - Transforming the Future</title>
+    <title>AI Innovate© - Transforming the Future</title>
     <style>
         * {
             margin: 0;
@@ -14,7 +14,7 @@
 
         body {
             background-color: #f5f5f5;
-            color: #333;
+            color: #252525;
             line-height: 1.6;
         }
 
