--- a/03. Mini Project - Basic Git Commands/index.html
+++ b/03. Mini Project - Basic Git Commands/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Innovate© - Transforming the Future</title>
+    <title>AI Innovate - Transforming the Future</title>
     <style>
         * {
             margin: 0;
@@ -14,13 +14,13 @@
 
         body {
             background-color: #f5f5f5;
-            color: #252525;
+            color: #333;
             line-height: 1.6;
         }
 
         /* Navigation */
         .navbar {
-            background-color: #2c3e50;
+            background-color: #161617;
             padding: 1rem 2rem;
             position: fixed;
             width: 100%;
@@ -129,7 +129,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <span class="logo">AI Innovate</span>
+            <span class="logo">AI Innovate©</span>
             <div>
                 <a href="#home">Home</a>
                 <a href="#features">Features</a>
