Change Nav Menu bg color from #161617 to  #3b3b44

--- a/04. Mini Project - Git Branching and Merging/index.html
+++ b/04. Mini Project - Git Branching and Merging/index.html
@@ -20,7 +20,7 @@
 
         /* Navigation */
         .navbar {
-            background-color: #161617;
+            background-color: #3b3b44;
             padding: 1rem 2rem;
             position: fixed;
             width: 100%;
