Finished the READ.me and sanitized the img folder

--- a/04. Mini Project - Git Branching and Merging/index.html
+++ b/04. Mini Project - Git Branching and Merging/index.html
@@ -20,7 +20,7 @@
 
         /* Navigation */
         .navbar {
-            background-color: #3b3b44;
+            background-color: #161617;
             padding: 1rem 2rem;
             position: fixed;
             width: 100%;
@@ -162,7 +162,7 @@
 
     <footer id="contact">
         <p>&copy; 2025 AI Innovate. All rights reserved.</p>
-        <p>Contact us: +2348110954670 | seun@aiinnovate.com| info@aiinnovate.com</p>
+        <p>Contact us: 0811095467 | seun@aiinnovate.com| info@aiinnovate.com</p>
     </footer>
 </body>
 </html>
