Added codes to all HTML files for the website

--- a/greenwood-library-website/about.html
+++ b/greenwood-library-website/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Join upcoming events at Greenwood Community Library, including book clubs and story times.">
-    <title>Events - Greenwood Community Library</title>
+    <meta name="description" content="Learn about Greenwood Community Library, serving the community since 1975 with books and events.">
+    <title>About Us - Greenwood Community Library</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&Lora:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -17,8 +17,8 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="events.html" class="active">Events</a></li>
+                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="events.html">Events</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
@@ -26,26 +26,14 @@
 
     <main>
         <section class="hero" style="background-image: url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');">
-            <h2>Upcoming Events</h2>
-            <p>Discover fun and engaging events for all ages.</p>
+            <h2>About Us</h2>
+            <p>Learn more about our mission and history.</p>
         </section>
 
-        <section class="events">
-            <h2>Event Schedule</h2>
-            <div class="event">
-                <img src="./images/book_club.jpg" alt="Book Club Event">
-                <h3>Book Club: "The Great Gatsby"</h3>
-                <p><strong>Date:</strong> May 10, 2025</p>
-                <p><strong>Time:</strong> 6:00 PM</p>
-                <p>Join us to discuss F. Scott Fitzgerald's classic novel.</p>
-            </div>
-            <div class="event">
-                <img src="./images/chidren_story_time.jpg" alt="Children's Story Time">
-                <h3>Children's Story Time</h3>
-                <p><strong>Date:</strong> May 15, 2025</p>
-                <p><strong>Time:</strong> 10:00 AM</p>
-                <p>Fun stories and activities for kids ages 3-7.</p>
-            </div>
+        <section class="about">
+            <h2>Our Story</h2>
+            <p>Greenwood Community Library has been serving the community since 1975. Our mission is to foster a love for reading, provide access to knowledge, and create a welcoming space for all.</p>
+            <p>We offer a wide range of resources, including books, e-books, audiobooks, and community programs. Whether you're a student, a parent, or a lifelong learner, we have something for you.</p>
         </section>
     </main>
 
