Add book reviews section/page

--- a/greenwood-library-website/contact.html
+++ b/greenwood-library-website/contact.html
@@ -19,6 +19,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="events.html">Events</a></li>
+                <li><a href="book_reviews.html" class="active">Book Reviews</a></li>
                 <li><a href="contact.html" class="active">Contact Us</a></li>
             </ul>
         </nav>
