--- a/greenwood-library-website/book_reviews.html
+++ b/greenwood-library-website/book_reviews.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn about Greenwood Community Library, serving the community since 1975 with books and events.">
-    <title>About Us - Greenwood Community Library</title>
+    <meta name="description" content="Read book reviews from the Greenwood Community Library community.">
+    <title>Book Reviews - Greenwood Community Library</title>
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&Lora:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="book_reviews.html" class="active">Book Reviews</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -27,14 +27,24 @@
 
     <main>
         <section class="hero" style="background-image: url('https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80');">
-            <h2>About Us</h2>
-            <p>Learn more about our mission and history.</p>
+            <h2>Book Reviews</h2>
+            <p>Explore reviews from our community of readers.</p>
         </section>
 
-        <section class="about">
-            <h2>Our Story</h2>
-            <p>Greenwood Community Library has been serving the community since 1975. Our mission is to foster a love for reading, provide access to knowledge, and create a welcoming space for all.</p>
-            <p>We offer a wide range of resources, including books, e-books, audiobooks, and community programs. Whether you're a student, a parent, or a lifelong learner, we have something for you.</p>
+        <section class="reviews">
+            <h2>Community Reviews</h2>
+            <div class="review">
+                <img src="https://images.unsplash.com/photo-1491841573634-5216d16b287b?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Book Cover - 1984">
+                <h3>"1984" by George Orwell</h3>
+                <p><strong>Reviewed by:</strong> Jane Doe</p>
+                <p>A chilling dystopian novel that remains relevant today. Highly recommend!</p>
+            </div>
+            <div class="review">
+                <img src="https://images.unsplash.com/photo-1507842217343-583bb727c8e7?ixlib=rb-4.0.3&auto=format&fit=crop&w=300&q=80" alt="Book Cover - Pride and Prejudice">
+                <h3>"Pride and Prejudice" by Jane Austen</h3>
+                <p><strong>Reviewed by:</strong> John Smith</p>
+                <p>A witty and timeless romance. Austen's characters are unforgettable.</p>
+            </div>
         </section>
     </main>
 
